--- a/style.css
+++ b/style.css
@@ -39,7 +39,13 @@ button {
 }
 
 .imagen {
+  width: 22%;
+  height: 22%;
+  float: right;
+}
+
+.imagen2 {
   width: 30%;
   height: 30%;
-  float: right;
+  float: left;
 }
